[gd_scene load_steps=11 format=3 uid="uid://esywf0ii8i6u"]

[ext_resource type="Script" uid="uid://mkd4c32tbstr" path="res://scenes/main.gd" id="1_fmw02"]
[ext_resource type="Texture2D" uid="uid://bj2ambwei5ogi" path="res://assets/bg.png" id="2_fps3c"]
[ext_resource type="PackedScene" uid="uid://beaa828xfn3nx" path="res://scenes/snake_segment.tscn" id="2_io2sj"]
[ext_resource type="PackedScene" uid="uid://tmcq5gpw66gu" path="res://scenes/hud.tscn" id="3_s77pf"]
[ext_resource type="Texture2D" uid="uid://dxyvfago0gd5f" path="res://assets/apple.png" id="5_sxedt"]
[ext_resource type="PackedScene" uid="uid://cad25ojl47q8" path="res://scenes/game_over_menu.tscn" id="6_xkat8"]
[ext_resource type="Texture2D" uid="uid://c1t58y0uvyym0" path="res://assets/protein.png" id="7_choun"]
[ext_resource type="Texture2D" uid="uid://dia54y5pq331u" path="res://assets/grape.png" id="7_o6xl0"]
[ext_resource type="PackedScene" uid="uid://bfli0dv0bogqi" path="res://scenes/Pause.tscn" id="8_tipki"]
[ext_resource type="Texture2D" uid="uid://4yb0cpcspo8d" path="res://assets/ppmax.png" id="8_ya4ey"]

[node name="Main" type="Node"]
script = ExtResource("1_fmw02")
snake_scene = ExtResource("2_io2sj")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(500, 550)
texture = ExtResource("2_fps3c")

[node name="Hud" parent="." instance=ExtResource("3_s77pf")]

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Food" type="Sprite2D" parent="."]
texture = ExtResource("5_sxedt")
offset = Vector2(25, 25)

[node name="Grape" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("7_o6xl0")
centered = false

[node name="PowerUp" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.35, 0.35)
texture = ExtResource("7_choun")
centered = false

[node name="PowerDown" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.35, 0.35)
texture = ExtResource("8_ya4ey")
centered = false

[node name="PauseMenu" parent="." instance=ExtResource("8_tipki")]

[node name="GameOverMenu" parent="." instance=ExtResource("6_xkat8")]
process_mode = 2

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="restart" from="GameOverMenu" to="." method="_on_game_over_menu_restart"]
